[gd_scene load_steps=25 format=3 uid="uid://b5su2w44w23wm"]

[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_q4nfy"]
[ext_resource type="Texture2D" uid="uid://bgob84y848x7s" path="res://sprites/Skeleton_3.png" id="2_t2yhd"]
[ext_resource type="AudioStream" uid="uid://xrs5m2667f1d" path="res://sound/LaserFire.wav" id="3_xjaj7"]
[ext_resource type="AudioStream" uid="uid://bosj6gog3dcu7" path="res://sound/Charge.wav" id="4_6ew6s"]
[ext_resource type="Texture2D" uid="uid://ukt7u7jyv2o1" path="res://sprites/Light.png" id="5_c276j"]
[ext_resource type="AudioStream" uid="uid://n4kqqft3rjoe" path="res://sound/Bones.wav" id="5_eyemr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e8w3m"]
atlas = ExtResource("2_t2yhd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwnox"]
atlas = ExtResource("2_t2yhd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqnic"]
atlas = ExtResource("2_t2yhd")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e2uw"]
atlas = ExtResource("2_t2yhd")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwyb7"]
atlas = ExtResource("2_t2yhd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5un1t"]
atlas = ExtResource("2_t2yhd")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1be4c"]
atlas = ExtResource("2_t2yhd")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l1q0"]
atlas = ExtResource("2_t2yhd")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v0wr"]
atlas = ExtResource("2_t2yhd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhtp7"]
atlas = ExtResource("2_t2yhd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_17dpc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8w3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwnox")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_bqnic")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_8e2uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwyb7")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5un1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1be4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l1q0")
}],
"loop": false,
"name": &"shoot",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v0wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhtp7")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhcu6"]
size = Vector2(10, 21)

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_3rdc6"]
length = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_remtm"]
light_mode = 1

[sub_resource type="Animation" id="Animation_xjfyo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Charge:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer/Fire:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3kedy"]
resource_name = "thicken_laser"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1.0, 4.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 1, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Charge:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer/Fire:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0uoyq"]
_data = {
"RESET": SubResource("Animation_xjfyo"),
"thicken_laser": SubResource("Animation_3kedy")
}

[sub_resource type="Environment" id="Environment_hip5g"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_q4nfy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_17dpc")
animation = &"death"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_hhcu6")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Laser" type="Area2D" parent="."]
position = Vector2(-3, -8)
collision_layer = 4
collision_mask = 4

[node name="Hitbox" type="CollisionShape2D" parent="Laser"]
rotation = 1.5708
shape = SubResource("SeparationRayShape2D_3rdc6")

[node name="RayCast2D" type="RayCast2D" parent="Laser"]
target_position = Vector2(-500, 0)
collide_with_areas = true

[node name="Line2D" type="Line2D" parent="Laser"]
z_index = 4
material = SubResource("CanvasItemMaterial_remtm")
points = PackedVector2Array(0, 0, -500, 0)
width = 1.0
default_color = Color(2, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Laser"]
libraries = {
"": SubResource("AnimationLibrary_0uoyq")
}

[node name="Charge" type="AudioStreamPlayer2D" parent="Laser/AnimationPlayer"]
stream = ExtResource("4_6ew6s")

[node name="Fire" type="AudioStreamPlayer2D" parent="Laser/AnimationPlayer"]
stream = ExtResource("3_xjaj7")

[node name="Light" type="Sprite2D" parent="Laser"]
self_modulate = Color(1, 0, 0, 0.647059)
scale = Vector2(0.53125, 0.53125)
texture = ExtResource("5_c276j")

[node name="PointLight2D" type="PointLight2D" parent="Laser/Light"]
texture = ExtResource("5_c276j")

[node name="TargetLight" type="Sprite2D" parent="Laser"]
self_modulate = Color(1, 0, 0, 0.647059)
z_index = 1
scale = Vector2(0.53125, 0.53125)
texture = ExtResource("5_c276j")

[node name="PointLight2D" type="PointLight2D" parent="Laser/TargetLight"]
texture = ExtResource("5_c276j")

[node name="Bones" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_eyemr")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hip5g")

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
